--- a/itsyrealm/static/style/style.css
+++ b/itsyrealm/static/style/style.css
@@ -91,6 +91,10 @@ p {
 	z-index: 1000;
 }
 
+.slide-image-full-content {
+	position: relative;
+}
+
 .slideshow-image-full-image {
 	position: fixed;
 
@@ -102,22 +106,27 @@ p {
 	margin-right: auto;
 
 	width: auto;
-	height: 90vh;
+	height: 80vh;
 
 	z-index: 1000;
 }
 
 .slideshow-image-full-image img {
-	width: auto;
-	height: 90vh;
+	margin-left: 5vw;
+
+	width: 90vw;
+	height: auto;
 }
 
 .slideshow-image-full-title {
-	position: absolute`;
+	display: block;
 
-	top: 5vh;
-	left: 5vh;
+	margin-left: 2.5vw;
+	margin-top: 2.5vh;
 
+	position: relative;
+
+	margin-top: -5vh;
 	color: white;
 
 	font-size: 2.5em;
@@ -127,14 +136,16 @@ p {
 }
 
 .slideshow-image-full-description {
-	position: fixed;
+	display: block;
 
-	bottom: 5vh;
-	left: 5vh;
+	margin-left: 2.5vw;
+	margin-top: 2.5vh;
+
+	position: relative;
 
 	color: white;
 
-	font-size: 2em;
+	font-size: 1.5em;
 	font-weight: normal;
 
 	z-index: 2000;
