--- a/itsyrealm/templates/admin/home/index.html
+++ b/itsyrealm/templates/admin/home/index.html
@@ -1,4 +1,4 @@
-{% extends 'admin/downloads/base.html' %}
+{% extends 'admin/home/base.html' %}
 {% block header %}
 	<h1>{% block title %}Admin{% endblock %}</h1>
 {% endblock %}
