--- a/itsyrealm/templates/home/download.html
+++ b/itsyrealm/templates/home/download.html
@@ -9,6 +9,9 @@
 		Click the download link above to download ItsyRealm for your platform.
 	</p>
 	<p>
+		<b>Windows users</b>: Please note the launcher requires the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=30653">.NET Framework 4.5</a> to run. The game also requires the latest <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">Visual C++ runtime</a>. These are probably installed on up-to-date Windows environments.
+	</p>
+	<p>
 		If that's not the right platform, or you want to download it for another one, select from the list below:
 	</p>
 	<ul id="ir-platforms-list"></ul>
