--- a/itsyrealm/static/style/style.css
+++ b/itsyrealm/static/style/style.css
@@ -3,7 +3,7 @@ body {
 	font-size: 24px;
 	line-height: 1.25;
 
-	background: fixed url("/static/images/background.png") center -132px no-repeat;
+	background: fixed url("/static/images/background.png") center no-repeat;
 	background-size: cover;
 }
 
