Some fixes after feedback.

--- a/itsyrealm/templates/home/base.html
+++ b/itsyrealm/templates/home/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="ItsyRealm, the 3D RPG where you fight, skill, and explore in a cute medieval Lovecraftian world filled terrors unimaginable. Also there's dragons." />
 		<title>{% block title %}ItsyRealm{% endblock %}</title>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link href="{{ url_for('static', filename='style/reset.css') }}" rel="stylesheet">
@@ -16,13 +18,14 @@
 				{% endblock %}
 				<footer>
 					<p>
-						Copyright &copy; <a href="http://aaronbolyard.com">Aaron Bolyard</a> - <a href="https://github.com/aaronbolyard/itsyscape">GitHub</a>
+						Copyright &copy; <a href="http://aaronbolyard.com">Aaron Bolyard</a>
 					</p>
 					<ul>
-						<li>- <a href="https://facebook.com/ItsyRealm" class="fab fa-facebook-f"></a></li>
-						<li>- <a href="https://twitter.com/ItsyRealm" class="fab fa-twitter"></a></li>
-						<li>- <a href="https://www.instagram.com/itsyrealm/" class="fab fa-instagram"></a></li>
-						<li>- <a href="https://discord.gg/xUSkF9n" class="fab fa-discord"></a></li>
+						<li><a href="https://github.com/aaronbolyard/itsyscape" class="fab fa-github"></a></li>
+						<li><a href="https://facebook.com/ItsyRealm" class="fab fa-facebook"></a></li>
+						<li><a href="https://twitter.com/ItsyRealm" class="fab fa-twitter"></a></li>
+						<li><a href="https://www.instagram.com/itsyrealm/" class="fab fa-instagram"></a></li>
+						<li><a href="https://discord.gg/xUSkF9n" class="fab fa-discord"></a></li>
 					</ul>
 				</footer>
 			</div>
