--- a/itsyrealm/templates/home/download.html
+++ b/itsyrealm/templates/home/download.html
@@ -4,9 +4,12 @@
 		<a id="ir-download-link" href="#/">Download!</a>
 		<span id="ir-download-default-platform" class="download-button-version"></span>
 	</div>
-	<h1>Download ItsyRealm!</h1>
+	<h1>{% block title %}Download ItsyRealm{% endblock %}!</h1>
 	<p>
 		Click the download link above to download ItsyRealm for your platform.
+	</p>
+	<p>
+		Please keep in mind ItsyRealm is currently in alpha. There may be bugs--even game breaking bugs. If you find any, feel free to report them on the <a href="https://github.com/aaronbolyard/itsyscape/issues">GitHub project page</a>!
 	</p>
 	<p>
 		<b>Windows users</b>: Please note the launcher requires the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=30653">.NET Framework 4.5</a> to run. The game also requires the latest <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">Visual C++ runtime</a>. These are probably installed on up-to-date Windows environments.
