--- a/itsyrealm/templates/home/index.html
+++ b/itsyrealm/templates/home/index.html
@@ -13,21 +13,21 @@
 	<p>
 		In ItsyRealm, you set forth on an awesome quest to discover the secrets of a necromancer god. Along the way, you'll...
 	</p>
-	<div>
-		<p class="left feature">
-			<img class="left" src="{{ url_for('static', filename='images/creeps.png') }}" width="320px" height="192px">
+	<div class="feature">
+		<img class="left" alt="Three scary monsters." src="{{ url_for('static', filename='images/creeps.png') }}" width="320px" height="192px">
+		<p class="left">
 			Employ dozens of unique combat strategies using sword, staff, and bow to slay mythical monsters and eldritch abominations...
 		</p>
 	</div>
-	<div>
-		<p class="right feature">
-			<img class="right" src="{{ url_for('static', filename='images/equipment.png') }}" width="320px" height="192px">
+	<div class="feature">
+		<img class="right" alt="Three heroes wearing cool equipment." src="{{ url_for('static', filename='images/equipment.png') }}" width="320px" height="192px">
+		<p class="right">
 			Utilize skills to gather resources while raiding dungeons, forests, ruins, seas, and more to craft powerful equipment and items...
 		</p>
 	</div>
-	<div>
-		<p class="left feature">
-			<img class="left" src="{{ url_for('static', filename='images/heroes.png') }}" width="320px" height="192px">
+	<div class="feature">
+		<img class="left" alt="Three adventurers needing help." src="{{ url_for('static', filename='images/heroes.png') }}" width="320px" height="192px">
+		<p class="left">
 			Help a bunch of like-minded adventurers achieve their own victories...
 		</p>
 	</div>
