--- a/itsyrealm/static/style/style.css
+++ b/itsyrealm/static/style/style.css
@@ -8,10 +8,23 @@ body {
 	background-size: cover;
 }
 
+@media (min-width: 700px) {
+	body {
+		font-size: 2.5vw;
+	}
+}
+
 main {
-	width: 800px;
+	width: 90vw;
+	min-width: 375px;
 
 	margin: 0 auto;
+}
+
+@media (min-width: 600px) {
+	body {
+		font-size: 2.5vw;
+	}
 }
 
 a, a:active, a:visited, a:hover {
@@ -37,12 +50,17 @@ b {
 #logo {
 	display: block;
 
-	width: 800px;
-	min-width: 800px !important;
-	height: 300px;
-	min-height: 300px !important;
+	width: 90vw;
+	min-width: 90vw !important;
+	max-width: 1000px;
+	height: 33.75vw;
+	max-height: 33.75vw;
+	max-height: 375px;
+
+	margin: 16px auto;
 
 	background: url("/static/images/logo.png") no-repeat center;
+	background-size: contain;
 }
 
 #content {
@@ -50,28 +68,36 @@ b {
 
 	margin-bottom: 2em;
 
-	padding-left: 128px;
-	padding-top: 96px;
+	padding: 8px;
 
-	padding-bottom: 5em;
+	padding-bottom: 30vw;
 
 	min-height: 600px !important;
 
 	border: 4px solid black;
 
-	background: url("/static/images/border-topLeft.png") top left no-repeat;
 	background-color: rgba(238, 236, 184, 0.8);
 }
 
-#content:after {
-	pointer-events: none;
-	content: "";
-	position: absolute;
-	top: 320px;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: url("/static/images/border-left.png") repeat-y;
+@media(min-width: 600px) {
+	#content {
+		padding-left: 128px;
+		padding-top: 96px;
+
+		background: url("/static/images/border-topLeft.png") top left no-repeat;
+		background-color: rgba(238, 236, 184, 0.8);
+	}
+
+	#content:after {
+		pointer-events: none;
+		content: "";
+		position: absolute;
+		top: 320px;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: url("/static/images/border-left.png") repeat-y;
+	}
 }
 
 h1 {
@@ -86,8 +112,16 @@ p {
 	margin-right: 1em;
 }
 
+@media (max-width: 850px) {
+	.slideshow {
+		display: none;
+	}
+}
+
 .slideshow {
-	margin-left: -32px;
+	width: 700px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 1em;
 
 	vertical-align: middle;
@@ -184,6 +218,7 @@ p {
 
 	color: white;
 
+	font-size: 24px;
 	text-align: center;
 
 	width: 348px;
@@ -202,6 +237,20 @@ p {
 	font-weight: bold;
 
 	font-size: 0.75em;
+}
+
+@media (max-width: 850px) {
+	.download-button {
+		display: block;
+		position: initial;
+		margin: auto;
+	}
+
+	.download-button-version {
+		position: block;
+		position: initial;
+		margin: auto;
+	}
 }
 
 .download-button:hover {
@@ -227,6 +276,8 @@ p {
 .slideshow-button-left {
 	display: inline-block;
 
+	margin: 16px 0;
+
 	width: 128px;
 	min-width: 128px !important;
 	height: 128px;
@@ -246,7 +297,7 @@ p {
 .slideshow-button-right {
 	display: inline-block;
 
-	margin: 16px;
+	margin: 16px 0;
 
 	width: 128px;
 	min-width: 128px !important;
@@ -274,12 +325,59 @@ p {
 	float: right;
 }
 
+@media (max-width: 599px) {
+	.left {
+		float: none;
+	}
+
+	.right {
+		float: none;
+	}
+}
+
 .feature {
+	overflow: auto;
+	margin: 1em 0;
 	text-align: justify;
+}
+
+@media (max-width: 599px) {
+	.feature {
+		overflow: initial;
+	}
+}
+
+.feature img {
+	width: 30vw;
+	height: 18vw;
+	margin: auto;
+}
+
+.feature p {
+	width: calc(40vw - 64px);
+}
+
+@media (max-width: 599px)
+{
+	.feature img {
+		clear: both;
+		display: block;
+		width: 320px;
+		height: 192px;
+		margin: auto;
+	}
+
+	.feature p {
+		width: 80%;
+		margin: auto;
+	}
 }
 
 .tagline {
 	clear: both;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 
 	text-align: center;
 	font-size: 1.5em;
@@ -289,18 +387,53 @@ p {
 footer {
 	position: absolute;
 	bottom: 0;
+	width: calc(100% - 128px);
 }
 
 footer p {
-	margin: 0;
+	font-size: 32px;
+	margin: 16px;
 	display: inline-block;
 }
 
 footer ul {
+	width: 270px;
 	display: inline-block;
 }
 
 footer ul li {
-	margin: 0;
-	display: inline-block;
+	display: block;
+	float: left;
+
+	margin: 8px;
+	width: 32px;
+	height: 32px;
+	font-size: 32px;
 }
+
+@media (max-width: 599px) {
+	footer {
+		width: 100%;
+	}
+}
+
+@media (max-width: 800px) {
+	footer p {
+		width: calc(100% - 32px);
+		text-align: center;
+	}
+
+	footer ul {
+		display: block;
+		margin: auto;
+	}
+}
+
+@media (max-width: 800px) {
+	footer p {
+		font-size: 24px;
+		width: calc(100% - 32px);
+		text-align: center;
+	}
+}
+
