--- a/itsyrealm/templates/home/base.html
+++ b/itsyrealm/templates/home/base.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ItsyRealm, the 3D RPG where you fight, skill, and explore in a cute medieval Lovecraftian world filled terrors unimaginable. Also there's dragons." />
+		<meta name="description" content="ItsyRealm, the 3D RPG where you fight, skill, and explore in a cute medieval Lovecraftian world filled with terrors unimaginable. Also there's dragons." />
 		<title>{% block title %}ItsyRealm{% endblock %}</title>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link href="{{ url_for('static', filename='style/reset.css') }}" rel="stylesheet">
