--- a/itsyrealm/templates/home/base.html
+++ b/itsyrealm/templates/home/base.html
@@ -18,7 +18,7 @@
 				{% endblock %}
 				<footer>
 					<p>
-						Copyright &copy; <a href="http://aaronbolyard.com">Aaron Bolyard</a>
+						Copyright &copy; <a href="http://aaronbolyard.com">Erin Maus</a>
 					</p>
 					<ul>
 						<li><a href="https://github.com/aaronbolyard/itsyscape" class="fab fa-github"></a></li>
