Update name. Update verbage.

--- a/itsyrealm/templates/home/base.html
+++ b/itsyrealm/templates/home/base.html
@@ -18,10 +18,10 @@
 				{% endblock %}
 				<footer>
 					<p>
-						Copyright &copy; <a href="http://aaronbolyard.com">Erin Maus</a>
+						Copyright &copy; <a href="http://erinmaus.com">Erin Maus</a>
 					</p>
 					<ul>
-						<li><a href="https://github.com/aaronbolyard/itsyscape" class="fab fa-github"></a></li>
+						<li><a href="https://github.com/erinmaus/itsyscape" class="fab fa-github"></a></li>
 						<li><a href="https://facebook.com/ItsyRealm" class="fab fa-facebook"></a></li>
 						<li><a href="https://twitter.com/ItsyRealm" class="fab fa-twitter"></a></li>
 						<li><a href="https://www.instagram.com/itsyrealm/" class="fab fa-instagram"></a></li>
