--- a/itsyrealm/templates/home/index.html
+++ b/itsyrealm/templates/home/index.html
@@ -11,18 +11,18 @@
 		<a href="#/" id="ir-slideshow-next-button" class="slideshow-button-right"></a>
 	</div>
 	<p>
-		In ItsyRealm, you set forth on an awesome quest to discover the secrets of a necromancer god. Along the way, you'll...
+		In ItsyRealm, you're on an awesome quest to discover the secrets of a necromancer god only known as the Empty King! Along your way, you'll...
 	</p>
 	<div class="feature">
 		<img class="left" alt="Three scary monsters." src="{{ url_for('static', filename='images/creeps.png') }}" width="320px" height="192px">
 		<p class="left">
-			Employ dozens of unique combat strategies using sword, staff, and bow to slay mythical monsters and eldritch abominations...
+			Have to think on your feet using staff, sword, and bow to fight mythical monsters and eldritch abominations...
 		</p>
 	</div>
 	<div class="feature">
 		<img class="right" alt="Three heroes wearing cool equipment." src="{{ url_for('static', filename='images/equipment.png') }}" width="320px" height="192px">
 		<p class="right">
-			Utilize skills to gather resources while raiding dungeons, forests, ruins, seas, and more to craft powerful equipment and items...
+			Use 21 skills and counting to gather and craft powerful equipment from dangerous dungeons, teeming forests, ancient ruins, the open sea, and more...
 		</p>
 	</div>
 	<div class="feature">
