--- a/itsyrealm/templates/admin/downloads/edit_release.html
+++ b/itsyrealm/templates/admin/downloads/edit_release.html
@@ -28,13 +28,13 @@
 							{{ download.num_downloads }}
 						</td>
 						<td>
-							<a class="btn btn-primary" href="{{ url_for('admin.downloads.edit_download', download_id=download.id) }}">Edit</a>
-							<a class="btn btn-danger" href="{{ url_for('admin.downloads.delete_download', download_id=download.id) }}">Delete</a>
+							<a class="btn btn-primary" href="{{ url_for('admin_downloads.edit_download', download_id=download.id) }}">Edit</a>
+							<a class="btn btn-danger" href="{{ url_for('admin_downloads.delete_download', download_id=download.id) }}">Delete</a>
 						</td>
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
 	{% endif %}
-	<a class="btn btn-primary" href="{{ url_for('admin.downloads.add_download', release_id=release.id) }}">Add Download</a>
+	<a class="btn btn-primary" href="{{ url_for('admin_downloads.add_download', release_id=release.id) }}">Add Download</a>
 {% endblock %}
