--- a/itsyrealm/templates/home/base.html
+++ b/itsyrealm/templates/home/base.html
@@ -19,7 +19,7 @@
 			{% endblock %}
 			<footer>
 				<p>
-					Copyright &copy; <a href="http://erinmaus.com">Erin Maus</a>
+					Copyright &copy; <a href="mailto:squeak@erinmaus.com">Erin Maus</a>
 				</p>
 			</footer>
 		</main>
